<resources>

    <string name="incorrect">Incorrect</string>
    <string name="correct">Correct</string>
    <string name="accuracy">Accuracy</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="app_name">H2H Learn</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="help">HELP</string>
    <string name="show">SHOW</string>
    <string name="hide">HIDE</string>
    <string name="login">LOGIN</string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_hint">Enter your email address. You will receive a confirmation email with instruction to reset your password.</string>
    <string name="send">Send</string>
    <string name="return_to_login">Return to Login</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="sign_up">SIGN UP</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="discover">Discover</string>
    <string name="search">Search</string>
    <string name="notification">Notification</string>
    <string name="category">Category</string>
    <string name="calendar">Calendar</string>
    <string name="my_courses">My Courses</string>
    <string name="me">Me</string>
    <string name="drop_course">Drop Course</string>
    <string name="search_course">Search For Courses</string>
    <string name="personal_info">Personal Info</string>
    <string name="change_password">Change Password</string>
    <string name="clear_offline_course_materials">Clear Offline Course Materials</string>
    <string name="clear_offline_course_materials_tips">Do you want to clear offline course material?</string>
    <string name="rate_h2h">Rate H2H</string>
    <string name="feedback">Feedback</string>
    <string name="photo">Photo</string>
    <string name="company_name">Company Name</string>
    <string name="phone">Phone</string>
    <string name="unbound">Unbound</string>
    <string name="to_bind">to bind</string>
    <string name="network_request_timeout">Network request timeout, please check the network settings</string>
    <string name="parse_data_error">Parse data error</string>
    <string name="server_response_value_error">Server response value error, the error code is %1$s</string>
    <string name="loading_text">loading&#8230;</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="email_format_error">Email format error</string>
    <string name="email_cannot_be_empty">Email cannot be empty</string>
    <string name="password_cannot_be_empty">Password cannot be empty</string>
    <string name="first_name_cannot_be_empty">First name cannot be empty</string>
    <string name="last_name_cannot_be_empty">Last name cannot be empty</string>
    <string name="re_enter_password_cannot_be_empty">Confirm password cannot be empty</string>
    <string name="incorrect_password">Passwords do not match</string>
    <string name="incorrect_current_password">Password and username don\'t match, please check again</string>
    <string name="password_format">Password length should be between 5 to 20</string>
    <string name="forgot_success_hint">Please check your email to reset your password.</string>
    <string name="phone_number">Phone Number</string>
    <string name="Mobile_number">Mobile Number</string>
    <string name="phone_cannot_be_empty">Phone cannot be empty</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="subject">Subject</string>
    <string name="subject_cannot_be_empty">Subject cannot be empty</string>
    <string name="feedback_text_hint">Tell us what you think</string>
    <string name="feedback_cannot_be_empty">Feedback cannot be empty</string>
    <string name="photo_album">Photo album</string>
    <string name="photograph">Photograph</string>
    <string name="new_course">NEW COURSES</string>
    <string name="recommended">RECOMMENDED</string>
    <string name="crash">Sorry,the program appears unusual, about to exit.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="join_course">Join Course</string>
    <string name="enrolled_success">You have successfully enrolled in this course</string>
    <string name="has_downloaded">maybe the file has downloaded completely</string>
    <string name="quiz">Quiz</string>
    <string name="congratulation">Congratulation</string>
    <string name="sorry">Sorry</string>
    <string name="sorry_tips">You Didn\'t Pass</string>
    <string name="congratulationtips">You have Passed</string>
    <string name="clearing">clearing…</string>
    <string name="delete_success">Clear cache success</string>
    <string name="delete_fail">Clear cache failed</string>
    <string name="mandatory_courses">Mandatory</string>
    <string name="enrolled_courses">Enrolled</string>
    <string name="completed_courses">Completed</string>
    <string name="signout_message">Do you want to Sign out?</string>
    <string name="press_exit_message">Press again to exit app</string>
    <string name="course_details">Details</string>
    <string name="course_comments">Comments</string>
    <string name="submit">Submit</string>
    <string name="survey">Survey</string>
    <string name="reply">Reply</string>
    <string name="rate_course">Rate the course</string>
    <string name="change_password_success">Password Changed</string>
    <string name="change_name_successfully">Name Changed</string>
    <string name="change_phone_successfully">Phone Number Changed</string>
    <string name="feedback_successfully">Feedback Successfully</string>
    <string name="quiz_answer_unfinished">Please fill all the questions</string>
    <string name="survey_answer_unfinished">Please fill all the questions</string>
    <string name="submit_message">Do you want to submit?</string>
    <string name="search_noresult">No Result Found</string>
    <string name="change_number_successfully">Phone Number Changed</string>
    <string name="submit_successfully">Submit Successfully</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading</string>
    <string name="open">Open</string>
    <string name="open_quiz">Start Quiz</string>
    <string name="open_survey">Start Survey</string>
    <string name="uploading">uploading&#8230;</string>
    <string name="server_error">We are facing technical difficulties connecting to our server. Please come back later and try again. You can let us know your issues by contacting us:\nhttp://www.liveh2h.com/contact</string>
    <string name="next_question">Next</string>
    <string name="feedback_tips">Thanks for being one of the first people to try out H2H Learn! In these early days, we\'re eager for feedback to help us make H2H Learn work better for you.\nGot Ideas or suggesstions for improving the app?Share your thoughts!</string>
    <string name="creat_date">Create date</string>
    <string name="action_settings">Settings</string>
    <string name="error_text">error!</string>
    <string name="forceUpdateReminder">There is a new version of the app available.</string>
    <string name="NO_REGISTRATION_REMINDER">You are a H2H User. However, you have not been invited or accepted the invitation as a H2H Learn Student, please contact your company to setup your student account. You can also visit our website for more information. http://www.liveh2h.com/h2h-learn/</string>
</resources>
