<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/search"
        android:title="@string/search"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/calendar"
        android:icon="@drawable/ic_calendar"
        android:title="@string/calendar"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/notification"
        android:icon="@drawable/ic_notification"
        android:title="@string/notification"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/dropCourse"
        android:title="@string/drop_course"
        app:showAsAction="never|withText"
        android:visible="false"/>
    <item
        android:id="@+id/category"
        android:icon="@drawable/ic_category_white"
        android:title="@string/category"
        app:showAsAction="ifRoom"/>
</menu>