<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ForgotPasswordActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/forgot_password"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/tvHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin_double"
        android:layout_marginLeft="@dimen/content_margin_left_right"
        android:layout_marginRight="@dimen/content_margin_left_right"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:text="@string/forgot_password_hint"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/tvEmail"
        style="@style/TextView.Lable"
        android:layout_marginLeft="@dimen/content_margin_left_right"
        android:layout_marginRight="@dimen/content_margin_left_right"
        android:text="@string/email"/>

    <EditText
        android:id="@+id/etEmail"
        style="@style/EditText.Default"
        android:layout_marginLeft="@dimen/content_margin_left_right"
        android:layout_marginRight="@dimen/content_margin_left_right"
        android:hint="@string/email"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        android:maxLength="@integer/email_length_max"/>

    <View
        style="@style/line"
        android:layout_marginLeft="@dimen/content_margin_left_right"
        android:layout_marginRight="@dimen/content_margin_left_right"/>

    <Button
        android:id="@+id/btnSend"
        style="@style/Button.Login"
        android:layout_marginLeft="@dimen/content_margin_left_right"
        android:layout_marginRight="@dimen/content_margin_left_right"
        android:text="@string/send"/>

    <Button
        android:id="@+id/btnLogin"
        style="@style/Button.Login"
        android:layout_marginLeft="@dimen/content_margin_left_right"
        android:layout_marginRight="@dimen/content_margin_left_right"
        android:background="@android:color/transparent"
        android:text="@string/return_to_login"
        android:textAppearance="?android:attr/textAppearance"/>
</LinearLayout>
