<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/ivLogo"
        style="@style/ImageView_Logo"
        android:layout_gravity="center_horizontal"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/activity_vertical_margin_double"
        android:overScrollMode="never"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:scrollbars="none">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivLogo"
            android:orientation="vertical"
            android:paddingLeft="@dimen/content_margin_left_right"
            android:paddingRight="@dimen/content_margin_left_right">

            <TextView
                android:id="@+id/tvFirstName"
                style="@style/TextView.Lable"
                android:text="@string/first_name"/>

            <EditText
                android:id="@+id/etFirstName"
                style="@style/EditText.Default"
                android:hint="@string/first_name"
                android:imeOptions="actionNext"
                android:inputType="text"/>

            <View style="@style/line_marginBottom"/>

            <TextView
                android:id="@+id/tvLastName"
                style="@style/TextView.Lable"
                android:text="@string/last_name"/>

            <EditText
                android:id="@+id/etLastName"
                style="@style/EditText.Default"
                android:hint="@string/last_name"
                android:imeOptions="actionNext"
                android:inputType="text"/>

            <View style="@style/line_marginBottom"/>

            <TextView
                android:id="@+id/tvEmail"
                style="@style/TextView.Lable"
                android:text="@string/email"/>

            <EditText
                android:id="@+id/etEmail"
                style="@style/EditText.Default"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"/>

            <View style="@style/line_marginBottom"/>

            <TextView
                android:id="@+id/tvPassword"
                style="@style/TextView.Lable"
                android:text="@string/password"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etPassword"
                    style="@style/EditText.Default"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:hint="@string/password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"/>

                <TextView
                    android:id="@+id/tvShowPassword"
                    style="@style/TextView.ShowPWD"/>

            </LinearLayout>

            <View style="@style/line_marginBottom"/>

            <TextView
                android:id="@+id/tvRePassword"
                style="@style/TextView.Lable"
                android:text="@string/confirm_password"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etRePassword"
                    style="@style/EditText.Default"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:hint="@string/confirm_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"/>

                <TextView
                    android:id="@+id/tvShowRePassword"
                    style="@style/TextView.ShowPWD"/>

            </LinearLayout>

            <View style="@style/line"/>

            <Button
                android:id="@+id/btnSignUp"
                style="@style/Button.Login"
                android:text="@string/sign_up"/>

            <Button
                android:id="@+id/btnLogin"
                style="@style/Button.Login"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@android:color/transparent"
                android:text="@string/return_to_login"
                android:textAppearance="?android:attr/textAppearance"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>