<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.UpdatePhoneActivity">

    <RelativeLayout
        android:background="@color/titlecolor"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titleheight"
        >
        <TextView
            style="@style/titletext"
            android:layout_centerInParent="true"
            android:text="@string/change_password"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

    </RelativeLayout>
    <include layout="@layout/layout_horizontalline"/>

    <EditText
        android:id="@+id/etCurrentPassword"
        style="@style/EditText.Default"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:hint="@string/current_password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:maxLength="@integer/password_length_max"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textColor="@color/black3"
        android:textColorHint="@color/black9"/>

    <View
        style="@style/line"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"/>

    <EditText
        android:id="@+id/etNewPassword"
        style="@style/EditText.Default"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:hint="@string/new_password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:maxLength="@integer/password_length_max"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textColor="@color/black3"
        android:textColorHint="@color/black9"/>

    <View
        style="@style/line"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"/>

    <EditText
        android:id="@+id/etConfirmNewPassword"
        style="@style/EditText.Default"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:hint="@string/confirm_new_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:maxLength="@integer/password_length_max"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textColor="@color/black3"
        android:textColorHint="@color/black9"/>

    <View
        style="@style/line"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"/>

</LinearLayout>