<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.UpdateNameActivity">

    <RelativeLayout
        android:background="@color/titlecolor"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titleheight"
        >
        <TextView
            style="@style/titletext"
            android:layout_centerInParent="true"
            android:text="@string/feedback"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

    </RelativeLayout>
    <include layout="@layout/layout_horizontalline"/>

    <EditText
        android:id="@+id/etSubject"
        style="@style/EditText.Default"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:hint="@string/subject"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textColor="@color/black3"
        android:textColorHint="@color/black9"/>

    <View
        style="@style/line"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"/>

    <EditText
        android:id="@+id/etText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:background="@android:color/transparent"
        android:hint="@string/feedback_text_hint"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:minLines="3"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textColor="@color/black3"
        android:textColorHint="@color/black9"
        android:textCursorDrawable="@null"/>

</LinearLayout>