<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="@dimen/divider_height"-->
        <!--android:background="@color/line_color_gray" />-->
    <include layout="@layout/layout_horizontalline"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/bottom_layout_color"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:background="@drawable/bg_imagebutton"
            android:id="@+id/ll_discover"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_discover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:scaleType="matrix"
                android:src="@drawable/main_tab_discover_selector"
               />

            <TextView

                android:id="@+id/tv_discover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/discover"
                android:textColor="@drawable/selector_tab_textcolor"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:background="@drawable/bg_imagebutton"
            android:id="@+id/ll_learn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_learn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="matrix"
                android:src="@drawable/main_tab_learn_selector" />

            <TextView
                android:id="@+id/tv_learn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/my_courses"
                android:textColor="@drawable/selector_tab_textcolor"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:background="@drawable/bg_imagebutton"
            android:id="@+id/ll_me"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="matrix"
                android:src="@drawable/main_tab_me_selector" />

            <TextView
                android:id="@+id/tv_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/me"
                android:textColor="@drawable/selector_tab_textcolor"
                android:textSize="12sp" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>